fix: UI scaling issues

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         frameworkUrl: "Build/SnakeBuild.framework.js",
         codeUrl: "Build/SnakeBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "CharanVendra",
         productName: "snake-game",
         productVersion: "1.0",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
